--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,10 @@
                                 setting. By way of Jira for task management and bootstrap frameworks, my team was able
                                 to reconstruct a website for Gatorade™.</p>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Link to GitHub</button>
+
+                        <a href="https://cjfaulkner04.github.io/AgileProject/" class="btn btn-primary active">
+                            <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Link to GitHub</a>
+
                     </div>
                 </div>
             </div>
@@ -71,13 +74,19 @@
                                 frameworks, I was able
                                 to construct a simple website landing page.</p>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary">Link to GitHub</button>
+                        <div class="btn-group">
+                            <a href="https://yeremygarcia.github.io/Project-Landing/" class="btn btn-primary active">
+                                <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Link to GitHub</a>
+                            </a>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
             <div class="col">
-                <div class="card mb-4 rounded-3 shadow-sm border-primary">
-                    <div class="card-header py-3 text-bg-primary border-primary">
+                <div class="card mb-4 rounded-3 shadow-sm">
+                    <div class="card-header py-3">
                         <h1 class="my-0 fw-normal">HTML</h1>
                     </div>
                     <div class="card-body">
@@ -87,7 +96,9 @@
                                 of VSCode for development. I was able
                                 to construct a basic website displaying one of my favorite recipes.</p>
                         </ul>
-                        <button type="button" class="w-100 btn btn-lg btn-primary">Link to GitHub</button>
+                        <a href="https://github.com/Stiegler-EdTech-CTAC/my-favorite-recipe-website-yeremygarcia"
+                            class="btn btn-primary active">
+                            <i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Link to GitHub</a>
                     </div>
                 </div>
             </div>
