--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,8 @@
                     <div class="card-body">
                         <h2 class="card-title pricing-card-title">Agile project</small></h2>
                         <ul class="list-unstyled mt-3 mb-4">
+                            <img src="agile.png" class="img-fluid border rounded-4 shadow-lg mb-6" alt="lilJ image"
+                                width="100" height="100" loading="lazy">
                             <p>A project showcasing the use and implementation of Agile methodology within a team
                                 setting. By way of Jira for task management and bootstrap frameworks, my team was able
                                 to reconstruct a website for Gatorade™.</p>
@@ -70,6 +72,8 @@
                     <div class="card-body">
                         <h2 class="card-title pricing-card-title">Project landing page</small></h2>
                         <ul class="list-unstyled mt-3 mb-4">
+                            <img src="bootstrap.png" class="img-fluid border rounded-4 shadow-lg mb-6" alt="lilJ image"
+                                width="100" height="100" loading="lazy">
                             <p>A project showcasing the use and implementation of Bootstrap 5. By way of using bootstrap
                                 frameworks, I was able
                                 to construct a simple website landing page.</p>
@@ -92,6 +96,8 @@
                     <div class="card-body">
                         <h2 class="card-title pricing-card-title">My favorite recipe<small></h2>
                         <ul class="list-unstyled mt-3 mb-4">
+                            <img src="html.png" class="img-fluid border rounded-4 shadow-lg mb-6" alt="lilJ image"
+                                width="100" height="100" loading="lazy">
                             <p>A project showcasing the use and implementation of basic HTML at a beginner level. By way
                                 of VSCode for development. I was able
                                 to construct a basic website displaying one of my favorite recipes.</p>
